Fixes and adding game state also fix body overflow

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -6,7 +6,7 @@
 /*   By: lde-la-h <lde-la-h@student.codam.nl>         +#+                     */
 /*                                                   +#+                      */
 /*   Created: 2022/09/05 19:11:21 by lde-la-h      #+#    #+#                 */
-/*   Updated: 2022/09/26 14:07:18 by lde-la-h      ########   odam.nl         */
+/*   Updated: 2022/09/29 16:52:52 by lde-la-h      ########   odam.nl         */
 /*                                                                            */
 /* ************************************************************************** */
 
@@ -115,6 +115,7 @@ hr {
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	flex-direction: column;
 }
 
 /*/ ////////////////////////////////////////////////////////////////////////////*/
