--- a/frontend/src/components/IconButton/IconButton.css
+++ b/frontend/src/components/IconButton/IconButton.css
@@ -6,7 +6,7 @@
 /*   By: lde-la-h <lde-la-h@student.codam.nl>         +#+                     */
 /*                                                   +#+                      */
 /*   Created: 2022/09/05 19:05:27 by lde-la-h      #+#    #+#                 */
-/*   Updated: 2022/09/26 14:17:29 by lde-la-h      ########   odam.nl         */
+/*   Updated: 2022/09/29 12:05:41 by lde-la-h      ########   odam.nl         */
 /*                                                                            */
 /* ************************************************************************** */
 
@@ -15,7 +15,7 @@
 	text-decoration: none;
 
 	cursor: pointer;
-	display: block;
+	display: inline-block;
 
 	margin: 4px;
 	padding: 6px;
