--- a/frontend/src/containers/Modal/Modal.css
+++ b/frontend/src/containers/Modal/Modal.css
@@ -1,30 +1,24 @@
 /* ************************************************************************** */
 /*                                                                            */
 /*                                                        ::::::::            */
-/*   Layout.css                                         :+:    :+:            */
+/*   Modal.css                                          :+:    :+:            */
 /*                                                     +:+                    */
 /*   By: lde-la-h <lde-la-h@student.codam.nl>         +#+                     */
 /*                                                   +#+                      */
 /*   Created: 2022/09/08 17:11:11 by lde-la-h      #+#    #+#                 */
-/*   Updated: 2022/09/29 16:28:39 by lde-la-h      ########   odam.nl         */
+/*   Updated: 2022/09/29 15:35:50 by lde-la-h      ########   odam.nl         */
 /*                                                                            */
 /* ************************************************************************** */
 
-.layout-container {
-	position: relative;
-    min-height: 100%;
-    display: flex;
-    flex-direction: row;
-}
-
-.layout-content {
-    margin: 0 auto;
-    width: 100%;
-	flex-grow: 2;
-
-    display: grid;
-    grid-template-rows: 0fr 1fr;
-
-    max-height: 100vh;
-    overflow: auto;
+.modal {
+	display: none;
+	position: fixed;
+	z-index: 1;
+	padding-top: 100px;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	overflow: auto;
+	background-color: rgba(0, 0, 0, 0.4);
 }
